<resources>
    <string name="app_name">Staftrack</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="profil">Profil</string>

    <!-- String related to menu -->
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="action_about">About</string>
    <string name="action_set">Settings</string>

    <!-- String related to send -->
    <string name="send_email">E-mail</string>
    <string name="send_sms">Text Message</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_email">This username is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="copyright">copyright 2016 Staftrack Apps by Patpat Corp.</string>

    <string-array name="spinnerpilihjbt">
        <item>Dosen</item>
        <item>Pegawai</item>
        <item>Mahasiswa</item>
    </string-array>

    <string-array name="list_profil">
        <item>About</item>
        <item>Terms and Policy</item>
        <item>Contact us</item>
    </string-array>
    <string name="title_activity_contact">ContactActivity</string>
</resources>
